# databricks-restaurant

./: .gitignore  README.md  main.py  pyproject.toml  set_env.ps1
restaurants/: .gitignore  .user.yml  dbt_project.yml
restaurants/analyses/: orders.sql
restaurants/models/: sources.yml
restaurants/models/bronze/: historical_orders.sql  orders.sql  reviews.sql
restaurants/models/silver/: dim_customer.sql  dim_menu_items.sql  dim_restaurants.sql
restaurants/models/sources/: sources.yml
restaurants/snapshots/: customer_snapshot.yml  menu_items_snapshot.yml  restaurants_snapshot.yml  ss_dim_customer.yml  ss_dim_menu_items.yml  ss_dim_restaurants.yml
