[project]
name = "databricks-restaurant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.11.11",
    "dbt-databricks>=1.12.1",
    "faker>=40.23.0",
    "python-dotenv>=1.2.2",
    "azure-eventhub>=5.11.0",
]
